# BI-Retail

./: .env  .gitignore  README.md  all.sql  clear.sql  constants.py  db.sqlite  entité.sql  lieux.sql  main.py  produit.sql  pyproject.toml
bigquery/: .gitignore  README.md  employee.ipynb  key.json.example  location.ipynb  product.ipynb  template.ipynb  test.ipynb
bigquery/notebook/: template.ipynb
bigquery/notebook/dim/: customer.ipynb  date.ipynb  employee.ipynb  location.ipynb  product.ipynb  transaction_type.ipynb
bigquery/notebook/facts/: purchase.ipynb  sales.ipynb  stock_movement.ipynb
bigquery/utils/: create.py  export.py  import_table.py
postgres/: export_tables.py  main.py
postgres/seeders/: brands.py  disputes_and_credits.py  employee.py  products.py  sales_order_line.py  stock_movement_status.py  stores.py
postgres/segmented/: sales.sql
postgres/utils/: database_connection.py
seed_scripts/: database_connection.py  main.py
seeders/: brands.py  employee.py  entities.py  locations.py  products.py  purchase_order.py  purchase_order_line.py  sales_order.py  stock_movement.py  stores.py  todo.md  warehouse.py  warehouses.py
segmented/: entity.sql  location.sql  product.sql  purchase.sql  stock_transfert.sql
utils/: database_connection.py
